Try a fix to make the `vh` better on mobile devices (where there's overlap with other "bars").

--- a/source/css/components/_navigation.scss
+++ b/source/css/components/_navigation.scss
@@ -392,8 +392,10 @@ $__link_indentation: 28px; // indentation to have links and icons be a bit consi
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100vw; // fallback if stretch/fill/fill-available does not work
+  width: stretch; // works better than vw on mobile devices
+  height: 100vh; // fallback if stretch/fill/fill-available does not work
+  height: stretch; // works better than vh on mobile devices
   padding: $gutter;
   background: rgba($colour_pro, 0.20);
 
